# ede-cmake

./: CMakeLists.txt
cmake/: BuildApplet.cmake
ede-autostart/: CMakeLists.txt
ede-dialog/: CMakeLists.txt
ede-keyboard-conf/: CMakeLists.txt  ede-keyboard-conf.cpp
ede-panel/: CMakeLists.txt
ede-panel/applets/: CMakeLists.txt
ede-panel/applets/clock/: CMakeLists.txt  Clock.cpp
ede-panel/applets/keyboard-layout/: CMakeLists.txt  KeyLayout.cpp
ede-panel/applets/start-menu/: CMakeLists.txt  StartMenu.cpp
ede-panel/applets/system-tray/: CMakeLists.txt  Tray.cpp  Tray.h
ede-panel/applets/taskbar/: CMakeLists.txt  Taskbar.h
ede-preferred-applications/: CMakeLists.txt
ede-timedate/: CMakeLists.txt
resources/: ede-settings.conf  ede-startup.conf
