set(PROJECT ede-keyboard-conf)

set(SOURCES
    ede-keyboard-conf.cpp
)

ADD_EXECUTABLE(${PROJECT} ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT} ${FLTK_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT} ${OPENGL_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT} ${XKB_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT} ${EDELIB_LIBRARIES})
