set(PROJECT ede-panel)

set(SOURCES
    ede-panel.cpp
    Panel.cpp
    Hider.cpp
    AppletManager.cpp
)

ADD_EXECUTABLE(${PROJECT} ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT} ${FLTK_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT} ${OPENGL_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT} ${XKB_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT} ${EDELIB_LIBRARIES})

ADD_SUBDIRECTORY(applets)
