set(PROJECT ede-preferred-applications)
set(SOURCES
    ede-preferred-applications.cpp
    AppChoice.cpp
)

ADD_EXECUTABLE(${PROJECT} ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT} ${FLTK_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT} ${OPENGL_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT} ${EDELIB_LIBRARIES})
